--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,168 +1,295 @@
-.page {
-  --gray-rgb: 0, 0, 0;
-  --gray-alpha-200: rgba(var(--gray-rgb), 0.08);
-  --gray-alpha-100: rgba(var(--gray-rgb), 0.05);
-
-  --button-primary-hover: #383838;
-  --button-secondary-hover: #f2f2f2;
-
-  display: grid;
-  grid-template-rows: 20px 1fr 20px;
+.TBGHomeHeader {
+  display: flex;
+  justify-content: space-between;
   align-items: center;
-  justify-items: center;
-  min-height: 100svh;
-  padding: 80px;
-  gap: 64px;
-  font-family: var(--font-geist-sans);
+  background-image: 
+    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, .6)),
+    url('/images/coloredweights.jpg');
+  background-size: cover;
+  background-position: center center;
 }
-
-@media (prefers-color-scheme: dark) {
-  .page {
-    --gray-rgb: 255, 255, 255;
-    --gray-alpha-200: rgba(var(--gray-rgb), 0.145);
-    --gray-alpha-100: rgba(var(--gray-rgb), 0.06);
-
-    --button-primary-hover: #ccc;
-    --button-secondary-hover: #1a1a1a;
-  }
+.TBGHomeLeftHeader {
+  flex: 1;
+  margin-left: 50px;
+  padding: 0px 0 25px 0;
 }
-
-.main {
+.TBGHomeLeftHeader h1 {
+  font-family: poppins;
+  color: #fff;
+}
+.TBGHomeLeftHeader p {
+  color: #fff;
+}
+.TBGHomeLeftHeader button {
+  margin-top: 10px;
+  background-color: #768958;
+  border-color: #768958;
+}
+.TBGHomeRightHeader {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  margin-right: 50px;
+  padding: 20px 0 25px 0;
+}
+.TBGHomeHeaderImage {
+  width: auto;
+  height: 400px;
+  border-radius: 8px;
+  border: 5px solid #fff;
+}
+.TBGHomeAboutImage {
+  width: auto;
+  height: 300px;
+  border-radius: 8px;
+  border: 5px solid #000;
+}
+.TBGHomeAboutSection {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+.TBGHomeAboutLeftPanel {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  padding: 10px 0 25px 0;
+}
+.TBGHomeAboutRightPanel h1 {
+  font-family: poppins;
+  color: #0e1111;
+}
+.TBGHomeAboutRightPanel p {
+  color: #353839;
+}
+.TBGHomeAboutRightPanel {
+  flex: 1;
+  margin: 0 45px 50px 45px;
+}
+.TBGLearnMoreButton {
+  background: #768958;
+  color: #ffffff;
+  border: 1px solid #768958;
+  padding: 10px 20px;
+  margin: 20px 30px 0px 0px;
+  font-family: 'Poppins';
+  border-radius: 8px;
+  cursor: pointer;
+  transition: 0.3s background-color ease, 0.3s border-color;
+}
+.TBGLearnMoreButton:hover {
+  background-color: #353839;
+  border-color: #353839;
+}
+.TBGHomeServicesSection {
+  background-color: #768958;
+  padding: 50px 20px;
+}
+.TBGHomeServicesSection h1 {
+  color: white;
+}
+.TBGHomeServicesSection h1, .TBGHomeServicesSection h2 {
+  font-family: poppins;
+}
+.TBGHomeServicesSection h2 {
+  color: #0e1111;
+}
+.TBGHomeServicesText {
+  color: #353839;
+}
+.TBGLearnHowLink{
+  display: inline;
+  text-decoration: underline;
+  font-weight: bold;
+  font-family: poppins;
+  color: #768958;
+  transition: 0.3s color ease;
+}
+.TBGLearnHowLink:hover {
+  color: #353839;
+}
+.TBGHomeServicesHeader {
+  text-align: center;
+  margin: 0 auto;
+  padding-bottom: 40px;
+}
+.TBGHomeServicesTopRow {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  margin-bottom: 40px;
+}
+.TBGServicesTopRowLeftPanel, .TBGServicesTopRowRightPanel {
+  flex: 1;
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
   display: flex;
   flex-direction: column;
-  gap: 32px;
-  grid-row-start: 2;
-}
-
-.main ol {
-  font-family: var(--font-geist-mono);
-  padding-left: 0;
-  margin: 0;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: -0.01em;
-  list-style-position: inside;
-}
-
-.main li:not(:last-of-type) {
-  margin-bottom: 8px;
-}
-
-.main code {
-  font-family: inherit;
-  background: var(--gray-alpha-100);
-  padding: 2px 4px;
-  border-radius: 4px;
-  font-weight: 600;
-}
-
-.ctas {
-  display: flex;
-  gap: 16px;
-}
-
-.ctas a {
-  appearance: none;
-  border-radius: 128px;
-  height: 48px;
-  padding: 0 20px;
-  border: none;
-  border: 1px solid transparent;
-  transition:
-    background 0.2s,
-    color 0.2s,
-    border-color 0.2s;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
   justify-content: center;
-  font-size: 16px;
-  line-height: 20px;
-  font-weight: 500;
-}
-
-a.primary {
-  background: var(--foreground);
-  color: var(--background);
-  gap: 8px;
-}
-
-a.secondary {
-  border-color: var(--gray-alpha-200);
-  min-width: 180px;
-}
-
-.footer {
-  grid-row-start: 3;
-  display: flex;
-  gap: 24px;
-}
-
-.footer a {
-  display: flex;
   align-items: center;
-  gap: 8px;
+  text-align: center;
+  transition: transform 0.5s ease, box-shadow 0.5s ease, background 0.5s ease;
 }
-
-.footer img {
-  flex-shrink: 0;
+.TBGServicesTopRowLeftPanel:hover, .TBGServicesTopRowRightPanel:hover {
+  transform: scale(1.025);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
 }
-
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  a.primary:hover {
-    background: var(--button-primary-hover);
-    border-color: transparent;
-  }
-
-  a.secondary:hover {
-    background: var(--button-secondary-hover);
-    border-color: transparent;
-  }
-
-  .footer a:hover {
-    text-decoration: underline;
-    text-underline-offset: 4px;
-  }
+.TBGServicesTopRowLeftPanel img, .TBGServicesTopRowRightPanel img {
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
-
-@media (max-width: 600px) {
-  .page {
-    padding: 32px;
-    padding-bottom: 80px;
-  }
-
-  .main {
-    align-items: center;
-  }
-
-  .main ol {
-    text-align: center;
-  }
-
-  .ctas {
+.TBGHomeServicesBottomRow {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  margin-bottom: 40px;
+}
+.TBGServicesBottomRowLeftPanel, .TBGServicesBottomRowRightPanel {
+  flex: 1;
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  transition: transform 0.5s ease, box-shadow 0.5s ease, background 0.5s ease;
+}
+.TBGServicesBottomRowLeftPanel:hover, .TBGServicesBottomRowRightPanel:hover {
+  transform: scale(1.025);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
+}
+.TBGServicesBottomRowLeftPanel img, .TBGServicesBottomRowRightPanel img {
+  width: 50px;
+  height: 50px;
+  object-fit: contain;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.TBGAboutHeader {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+  margin-bottom: 40px;
+  background-color: red;
+}
+.TBGAboutHeaderLeft {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  padding: 10px 0 25px 0;
+}
+.TBGAboutHeaderRight {
+  flex: 1;
+  margin-left: 30px;
+  padding: 10px 0 25px 0;
+}
+@media (max-width: 768px) {
+  .TBGHomeHeader {
     flex-direction: column;
-  }
-
-  .ctas a {
-    font-size: 14px;
-    height: 40px;
-    padding: 0 16px;
-  }
-
-  a.secondary {
-    min-width: auto;
-  }
-
-  .footer {
-    flex-wrap: wrap;
     align-items: center;
+    padding-bottom: 20px;
+  }
+  .TBGHomeLeftHeader {
+    margin-left: 0;
+    padding: 0px 50px 15px 50px;
+  }
+
+  .TBGHomeRightHeader {
+    margin-right: 0;
+    padding: 10px 0;
     justify-content: center;
   }
+
+  .TBGHomeServicesTopRow,
+  .TBGHomeServicesBottomRow {
+    flex-direction: column;
+    gap: 30px;
+    align-items: center;
+  }
+
+  .TBGServicesTopRowLeftPanel,
+  .TBGServicesTopRowRightPanel,
+  .TBGServicesBottomRowLeftPanel,
+  .TBGServicesBottomRowRightPanel {
+    flex: 1;
+    width: 90%;
+  }
+
+  .TBGHomeAboutSection {
+    flex-direction: column;
+    padding: 20px;
+  }
+
+  .TBGHomeAboutLeftPanel {
+    margin-bottom: 0px;
+  }
+
+  .TBGLearnMoreButton,
+  .TBGLearnHowLink {
+    width: 100%;
+    text-align: center;
+  }
 }
 
-@media (prefers-color-scheme: dark) {
-  .logo {
-    filter: invert();
+@media (max-width: 500px) {
+  .TBGHomeHeader {
+    padding: 0px 10px 15px 10px;
+  }
+
+  .TBGHomeLeftHeader {
+    margin-left: 0;
+    padding: 10px 10px;
+  }
+
+  .TBGHomeRightHeader {
+    margin-right: 0;
+    padding: 10px 0;
+    justify-content: center;
+    width: 100%;
+  }
+
+  .TBGHomeHeaderImage {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+  }
+
+  .TBGHomeAboutImage {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+  }
+
+  .TBGHomeAboutLeftPanel {
+    padding: 10px;
+    width: 100%;
+  }
+
+  .TBGHomeAboutRightPanel {
+    margin: 0;
+    padding-bottom: 10px;
+    width: 100%;
+  }
+
+  .TBGLearnMoreButton {
+    width: 100%;
+    margin-top: 20px;
+  }
+
+  .TBGHomeServicesSection {
+    padding: 30px 10px;
+  }
+
+  .TBGHomeServicesHeader {
+    padding-bottom: 20px;
   }
 }
