--- a/src/app/contact/contact.module.css
+++ b/src/app/contact/contact.module.css
@@ -45,9 +45,12 @@
 .TBGContactSocialsPanel h2 {
   font-family: 'Poppins';
 }
-.TBGInstagramIcon {
-  height: 30px;
-  width: 30px;
+.TBGSocialsIcon {
+  display: inline-block;
+  padding: 0;
+  margin: 0;
+  height: 40px;
+  width: 40px;
 }
 .TBGContactResultsSection {
   display: flex;
